<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chtv.korsoapp.fragments.NewEventFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:id="@+id/container">
    <TextView
        android:id="@+id/event_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:textSize="@dimen/normal_text_size"
        android:paddingBottom="8dp"
        android:text="@string/event_name_text" />
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/event_name_edittext"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/normal_text_size"
        android:layout_toEndOf="@+id/event_name_textview"
        android:layout_toRightOf="@+id/event_name_textview" />
    <TextView
        android:id="@+id/from_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_text"
        android:paddingStart="8dp"
        android:textSize="@dimen/normal_text_size"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_below="@+id/event_name_edittext"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/from_date_edittext"
        android:layout_width="match_parent"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:textSize="@dimen/normal_text_size"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/from_textview"
        android:layout_below="@+id/event_name_edittext"
        android:layout_alignLeft="@+id/event_name_edittext"
        android:layout_alignStart="@+id/event_name_edittext"
        android:layout_toRightOf="@+id/from_textview"
        android:focusable="false"/>
    <TextView
        android:id="@+id/until_textview"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/until_text"
        android:textSize="@dimen/normal_text_size"
        android:layout_below="@+id/from_date_edittext"/>
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/until_date_edittext"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:textSize="@dimen/normal_text_size"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/from_textview"
        android:layout_below="@+id/from_date_edittext"
        android:layout_alignLeft="@+id/event_name_edittext"
        android:layout_alignStart="@+id/event_name_edittext"
        android:layout_toRightOf="@+id/from_textview"
        android:focusable="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_text"
            android:id="@+id/save_button"
            android:layout_marginTop="8dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/until_date_edittext"/>
        <Button
            android:id="@+id/add_session_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_session"
            android:layout_marginTop="8dp"
            android:layout_below="@id/save_button"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/sessions_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:clickable="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/add_session_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
    </android.support.v7.widget.RecyclerView>

    </RelativeLayout>
</FrameLayout>
